[package]
name = "exif-json"
version = "0.1.0"
authors = ["Gareth Lennox <garethl@gmail.com>"]
edition = "2018"

repository = "https://github.com/garethl/exif-json"
homepage = "https://github.com/garethl/exif-json"
license = "MIT"
license-file = "LICENSE.txt"
readme = "README.md"

[dependencies]
kamadak-exif = "0.5"
serde_json = "1.0"